--- a/css/main.less
+++ b/css/main.less
@@ -2110,8 +2110,9 @@ footer{
 
 
 .about_map{
-  margin-top: 10px;
+  padding-top: 10px;
   position: relative;
+  padding-bottom: 10px;
 
   .container{
     position: absolute;
@@ -2189,5 +2190,96 @@ footer{
         }
       }
     }
+  }
+}
+
+
+.news_grid{
+  .grid-item{
+    padding: 5px;
+    .news_item{
+      margin-bottom: 0;
+      border:1px solid #BCBABD;
+      position: relative;
+      &:hover{
+        &:before{
+          opacity: 1;
+        }
+        .btn_default{
+          opacity: 1;
+        }
+      }
+      &:before{
+        .b_a();
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.6);
+        .transition(@transition_default);
+        opacity: 0;
+      }
+      .btn_default{
+        position: absolute;
+        .m_a();
+        width: 140px;
+        height: 40px;
+        .flex();
+        .ai-center();
+        .j-center();
+        padding: 0;
+        .transition(@transition_default);
+        opacity: 0;
+        font-size: 16px;
+      }
+      picture{
+        display: inline-block;width: 100%;
+        text-align: center;
+        margin-bottom: 10px;
+        max-height: 99%;
+      }
+      .news_body{
+        padding: 10px 20px 37px;
+        @media (max-width:1200px){
+          padding: 10px 10px 25px;
+        }
+      }
+      .news_title{
+        font-weight: 500;
+        font-size: 22px;
+        line-height: 29px;
+        color: #444A59;
+        @media (max-width:1200px){
+          font-size: 20px;
+          line-height: 1.3;
+        }
+        @media (max-width:767px){
+          font-size: 18px;
+        }
+      }
+      .date{
+        font-size: 12px;
+        line-height: 30px;
+        color: #B5B7BD;    margin-bottom: 8px;
+      }
+      .desc{
+        font-size: 13px;
+        line-height: 20px;
+        color: #9D9EA3;
+      }
+    }
+  }
+}
+.grid-item {
+  width: 25%;
+  @media (max-width:1200px){
+    width: 50%;
+  }
+  @media (max-width:575px){
+    width: 100%;
+  }
+}
+.grid-item--width2 {
+  width: 50%;
+  @media (max-width:575px){
+    width: 100%;
   }
 }
