--- a/css/main.less
+++ b/css/main.less
@@ -947,12 +947,24 @@ background: @red;
   &.btn_red{
     color: #fff;
     background: @red;
+    &:hover{
+      background: #B4000E;
+    }
+    &:focus{
+      background: #9C020E;
+    }
   }
 
   &.btn_white{
     color: @red;
     background: #fff;
     border:1px solid @red;
+    &:hover{
+      background: #CF0F1D;
+    }
+    &:focus{
+      background: #B4000E;
+    }
   }
 
   &.btn_white2{
@@ -963,6 +975,12 @@ background: @red;
   &.btn_blue{
     background: #25346A;
     color: #fff;
+    &:hover{
+      background: #0C163C;
+    }
+    &:focus{
+      background: #03081C;
+    }
   }
 }
 
@@ -2423,5 +2441,81 @@ footer{
   .left{
       text-align: center;
     padding-top: 8vh;
+  }
+}
+
+
+
+.modal-dialog{
+  @media (min-width:576px){
+      max-width: 450px;
+    .border-radius(0);
+
+  }
+  .modal-content{
+    .border-radius(0);
+    border:0;
+    overflow: hidden;
+    background: #25346A;
+  }
+
+  .modal-body{
+    padding: 38px 50px;
+    @media (max-width:575px){
+      padding: 20px 20px;
+    }
+    .close{
+      opacity: 1;
+      position: absolute;
+      top: 5px;
+      right: 10px;
+    }
+  }
+
+  .form-control{
+    &::-webkit-input-placeholder{
+      font-size: 14px;
+      line-height: normal;
+      color: #9D9EA3;
+    }
+    &::-moz-placeholder{
+      font-size: 14px;
+      line-height: normal;
+      color: #9D9EA3;
+    }
+    &::-ms-input-placeholder{   font-size: 14px;
+      line-height: normal;
+      color: #9D9EA3;}
+    &:-moz-placeholder{   font-size: 14px;
+      line-height: normal;
+      color: #9D9EA3;}
+    &:-ms-input-placeholder{   font-size: 14px;
+      line-height: normal;
+      color: #9D9EA3;}
+  }
+
+  .modal_title{
+    color: #fff;
+      text-align: center;
+    font-weight: @bold;
+    font-size: 40px;
+    margin-bottom: 30px;
+    @media (max-width:575px){
+      font-size: 28px;margin-bottom: 20px;
+    }
+    span{
+      position: relative;
+      display: inline-block;
+      &:before{
+       .b_a();
+        width: 2000px;
+        height: 4px;
+        background: #CF0F1D;
+        right: 110%;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+      }
+    }
   }
 }
