--- a/css/main.less
+++ b/css/main.less
@@ -132,7 +132,11 @@ body{
 .container{
   max-width: 1230px;
 }
-
+.content{
+  a{
+    color: @red;
+  }
+}
 a, button, input, .form-control{
   box-shadow: none;
   outline: none;
@@ -635,11 +639,19 @@ background: @red;
     box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1), 0 50px 90px rgba(0, 0, 0, 0.1);
     background: #fff;
     float: left;
+    @media (max-width:767px){
+      height: 40px;
+    }
+
 
     .form-control{
       border:0;
       box-shadow: none !important;
       height: 60px;
+      @media (max-width:767px){
+        height: 40px;
+      }
+
       &::-webkit-input-placeholder{
         color: #A8ADBB;
         font: 14px @Poppins;
@@ -669,7 +681,9 @@ background: @red;
       position: relative;
       border:0;
       cursor: pointer;
-
+      @media (max-width:767px){
+        height: 40px;
+      }
     }
 
   }
@@ -2517,5 +2531,99 @@ footer{
         margin: auto;
       }
     }
+  }
+}
+
+
+
+.searching_results{
+  .item{
+    padding-bottom: 5px;
+    padding-top: 5px;
+    margin-bottom: 20px;
+    border: 1px solid #BCBABD;
+    .img_thumbnail_link{
+      display: inline-block;
+      width: 100%;
+    }
+    .img_thumbnail{
+      display: inline-block;
+      width: 100%;
+      height: 150px;
+      background-size: cover;
+      background-position: center;
+    }
+  }
+  .news_title{
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 29px;
+    color: #444A59;
+    margin-bottom: 20px;
+    display: inline-block;
+  }
+
+  .desc{
+    font-size: 13px;
+    line-height: 20px;
+    color: #9D9EA3;
+    margin-bottom: 15px;
+  }
+}
+
+.searching_results_form{
+  margin-bottom: 30px;
+  .search_form{
+    width: 100%;
+    .flex();
+    background: #fff;
+    border: 1px solid #BCBABD;
+    .form-control{
+      border:0;
+      box-shadow: none !important;
+      height: 60px;
+      @media (max-width:767px){
+        height: 40px;
+      }
+      @media (max-width:575px){
+        height: 30px;
+      }
+      &::-webkit-input-placeholder{
+        color: #A8ADBB;
+        font: 14px @Poppins;
+      }
+      &:-moz-placeholder{
+        color: #A8ADBB;
+        font: 14px @Poppins;
+      }
+      &:-ms-input-placeholder{
+        color: #A8ADBB;
+        font: 14px @Poppins;
+      }
+      &::-moz-placeholder{
+        color: #A8ADBB;
+        font: 14px @Poppins;
+      }
+      &::-ms-input-placeholder{
+        color: #A8ADBB;
+        font: 14px @Poppins;
+      }
+
+    }
+    .search_form_btn{
+      width: 60px;
+      height: 60px;
+      background: #fff;
+      position: relative;
+      border:0;
+      cursor: pointer;
+      @media (max-width:767px){
+        height: 40px;
+      }
+      @media (max-width:575px){
+        height: 30px;
+      }
+    }
+
   }
 }
