--- a/css/main.less
+++ b/css/main.less
@@ -120,6 +120,7 @@ body{
   font-size: 18px;
   font-family: @Poppins;
   font-weight: @light;
+  overflow-x: hidden;
   @media (max-width:1200px){
     font-size: 16px;
   }
@@ -165,6 +166,25 @@ a{
 
 img, video{
   max-width: 100%;
+}
+
+
+h2, .h2{
+
+}
+
+h3, .h3{
+  font-weight: 600;
+  font-size: 20px;
+  color: #000;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  @media (max-width:767px){
+    font-size: 18px;
+  }
+  @media (max-width:575px){
+    font-size: 16px;
+  }
 }
 
 section{
@@ -999,13 +1019,16 @@ background: @red;
 }
 
 .home_categories{
-  overflow-x: hidden;
+  overflow: visible;
   padding-bottom: 0;
 }
 
 .categories_slider{
   margin: 0 -5px;
-  max-height: 300px;
+ max-height: 300px;
+
+
+
   .slider_item{
     padding: 20px 5px;
   }
@@ -2622,6 +2645,387 @@ footer{
       }
       @media (max-width:575px){
         height: 30px;
+      }
+    }
+
+  }
+}
+
+
+.product_content{
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.product_container{
+  .product_row{
+
+    .product_col_left{
+      padding-bottom: 55px;
+      @media (max-width:767px){
+        padding-bottom: 35px;
+      }
+      @media (min-width:768px){
+        padding-top: 9vh;
+      }
+      @media (min-width:1200px){
+        -ms-flex: 0 0 46%;
+        flex: 0 0 46%;
+        max-width:46%;
+        padding-top: 11vh;
+      }
+
+      @media (min-width:1300px){
+        padding-top: 16vh;
+      }
+      @media (min-width:1500px){
+        padding-top: 25vh;
+      }
+    }
+    .product_col_right{
+      @media (min-width:1200px){
+        -ms-flex: 0 0 54%;
+        flex: 0 0 54%;
+        max-width: 54%;
+      }
+    }
+
+    .product_col_right_content{
+      background: #25346A;
+      padding-left: 15px;
+      height: 100%;
+      @media (min-width:1200px){
+          padding-left: 75px;
+      }
+      @media (max-width:767px){
+        padding-top: 20px;
+        padding-bottom: 20px;
+      }
+      .breadcrumb{
+        background: none;
+        margin: 0;
+        padding-top: 20px;
+        .breadcrumb-item{
+          &:before{
+            color: #fff;
+          }
+        }
+        *{
+          color: #fff;
+        }
+      }
+
+      .pr_content{
+
+        @media (min-width:768px){
+          margin-top: 3.3vh;
+        }
+        @media (min-width:1200px){
+          margin-top: 5.3vh;
+        }
+        @media (min-width:1300px){
+          margin-top: 10.3vh;
+        }
+        @media (min-width:1500px){
+          margin-top: 19.3vh;
+        }
+
+        .h1{
+          font-family: @Poppins;
+          font-weight:@bold;
+          font-size: 40px;
+          color: #FFFFFF;
+          text-transform: uppercase;
+          margin-bottom: 40px;
+          @media (max-width:1200px){
+            font-size: 35px;
+            margin-bottom: 20px;
+          }
+          @media (max-width:991px){
+            font-size: 30px;
+          }
+        }
+
+        .product_code{
+          font-size: 14px;
+          line-height: normal;
+          color: rgba(255, 255, 255, 0.7);
+          margin-bottom: 30px;
+          @media (max-width:1200px){
+            margin-bottom: 20px;
+          }
+        }
+
+
+        .energy{
+          width: 104px;
+          height: 40px;
+          position: relative;
+          display: flex;
+          display: -webkit-flex;
+          align-items: center;
+          -webkit-align-items: center;
+          color: #fff;
+          font-size: 25px;
+          padding-left: 45px;
+          background: #00A34A;
+          margin-bottom: 20px;
+          @media (max-width:1200px){
+            margin-bottom: 10px;
+          }
+          span{
+            font-size: 14px;
+            .flex();
+            .ai-start();
+            margin-top: -7px;
+            margin-left: 3px;
+          }
+          &:before{
+            .b_a();
+            width: 0;
+            height: 0;
+            right: -18px;
+            top: 0;
+            border-left:18px solid  #00A34A;
+            border-top:20px solid  transparent;
+            border-bottom:20px solid  transparent;
+          }
+        }
+
+
+        .desc{
+          font-size: 20px;
+          line-height: 45px;
+          color: #FFFFFF;
+          margin-bottom: 68px;
+          @media (max-width:1200px){
+            line-height: 1.3;
+            margin-bottom: 30px;
+            font-size: 16px;
+          }
+        }
+        .colour{
+          .flex();
+          .ai-center();
+          span{
+            font-size: 16px;
+            line-height: normal;
+            color: rgba(255, 255, 255, 0.7);
+            display: inline-block;
+            margin-right: 2px;
+          }
+          .colour_list{
+            .flex();
+            span{
+              display: inline-block;
+              width: 20px;
+              height: 20px;
+              background-size: cover;
+              background-position: center;
+              margin: 0 3px;
+            }
+          }
+
+        }
+
+      }
+
+
+    }
+  }
+}
+
+
+
+
+.prodict_slider_container{
+  max-width: 395px;
+  margin: auto;
+
+
+  .product_main_slider{
+    margin-bottom: 15px;
+    @media (max-width:767px){
+      margin-bottom: 10px;
+    }
+    .p_slider_item{
+      picture{
+        display: inline-block;
+        height: 385px;
+        width: 100%;
+        position: relative;
+        @media (max-width:1200px){
+          height: auto;
+        }
+        a{
+          display: inline-block;
+          width: 100%;
+          height: 100%;
+          img{
+            @media (min-width:1200px){
+              position: absolute;
+              .m_a();
+              max-width: 99%;
+              max-height: 99%;
+            }
+          }
+        }
+      }
+    }
+  }
+
+
+  .product_slider_nav{
+    .slider_item{
+      text-align: center;
+      &.slick-current{
+        .item_nav{
+          border: 2px solid #CF0F1D;
+        }
+      }
+      .item_nav{
+        display: inline-block;
+        position: relative;
+        width: 120px;
+        height: 120px;
+        border:1px solid #F1F1F2;
+        cursor: pointer;
+        @media (max-width:1200px){
+          width: 90px;
+          height: 90px;
+        }
+        img{
+          position: absolute;
+          .m_a();
+          max-height: 93%;
+          max-width: 93%;
+        }
+      }
+    }
+
+    .slick-dots{
+      @media (min-width:1200px){
+        bottom: -30px;
+      }
+      @media (max-width:767px){
+        bottom: -15px;
+      }
+        li{
+          width: 10px;
+          height: 10px;
+          margin: 0 7px;
+          &.slick-active{
+            button{
+              &:before{
+                background: #CF0F1D;
+              }
+            }
+          }
+          button{
+            width: 10px;
+            height: 10px;
+            .border-radius(50%);
+            position: relative;
+            &:before{
+              .b_a();
+              background: #C4C4C4;
+              width: 10px;
+              height: 10px;
+              .border-radius(50%);
+              opacity: 1;
+              .m_a();
+            }
+          }
+        }
+    }
+
+  }
+
+}
+
+
+.product_desc{
+  padding-top: 30px;
+    ul{
+      li{
+        position: relative;
+        padding-left: 10px;
+        margin-bottom: 12px;
+        &:before{
+          .b_a();
+          width: 5px;
+          height: 5px;
+          .border-radius(50%);
+          background: @red;
+          left: 0;
+          top: 11px;
+        }
+      }
+    }
+}
+
+
+
+
+.specifications{
+  padding-bottom: 0;
+
+
+  .section_title{
+    margin-bottom: 25px;
+    @media (min-width:1200px){
+      margin-top: 40px;
+    }
+  }
+
+
+
+  .specifications_row{
+    margin: 0 -20px;
+    > div{
+      padding: 0 20px;
+    }
+  }
+
+  .specifications_group{
+    margin-bottom: 35px;
+    @media (max-width:767px){
+      margin-bottom: 25px;
+    }
+    &:last-child{
+      @media (min-width:768px){
+        margin-bottom: 0;
+      }
+    }
+    .specifications_title{
+      font-weight: @bold;
+      font-size: 22px;
+      line-height: normal;
+      color: #444A59;
+      margin-bottom: 10px;
+    }
+
+    .specifications_list{
+      .item{
+        border-bottom:1px solid #9D9EA3;
+        padding: 10px 0;
+        @media (max-width:767px){
+          padding: 5px 0;
+        }
+        >.row{
+          > div{
+            font-size: 16px;
+            line-height: normal;
+            color: #444A59;
+            @media (max-width:767px){
+              font-size: 14px;
+            }
+            &:last-child{
+              text-align: right;
+              font-weight: @bold;
+            }
+          }
+        }
       }
     }
 
